src/scss/sections/_section-constraints.scss
// .resource-constraints-grid {
//   display: grid;
//   grid-template-columns: repeat(2, 1fr);
//   column-gap: 1rem;

//   li:nth-child(5),
//   li:nth-child(6) {
//     margin-bottom: 0;
//   }
// }

#the-constraints {
	background-color: $lightest-grey;
}

.card.card-constraints {
	padding: 0;
	width: 100vw;
	overflow: visible;
	border-radius: 0;
	background-color: transparent;

	@include breakpoint(med) {
		background-color: #fff;
		padding: 2rem;
		max-width: 90vw;
		width: fit-content;
		border-radius: 1.5rem;
	}

	@include breakpoint(lg) {
		padding: 3rem;
	}

	&.medium {
		max-width: 1080px;
	}

	&.small {
		border-radius: 5px;
		padding: 1rem;
		width: calc($content-max-width + 8rem);
	}
}

.constraints-content-container {
	display: flex;
	flex-direction: column;
	align-items: start;
	justify-content: center;
	gap: 0.5rem;
	width: 100%;
	margin: 0 auto;

	.subheading {
		font-size: 1.25rem;
	}

	@include breakpoint(mobile-lg) {
		width: 90vw;
		display: grid;
		grid-template-columns: repeat(2, 1fr);
		grid-template-rows: auto auto;
		grid-template-areas: "a b" "c c";

		:first-child {
			grid-area: a;
		}

		:nth-child(2) {
			grid-area: b;
		}

		:last-child {
			grid-area: c;
		}
	}
}

.constraint-grid-container {
	display: grid;
	grid-template-columns: 1fr auto;
	grid-template-rows: auto auto;
	grid-template-areas: "b a" "c a";
	justify-content: start;
	align-items: center;
	gap: 0.5rem;
	column-gap: 1rem;
	width: 100%;
	text-align: left;
	padding: 1.25rem 5vw;
	background-color: #fff;
	height: 100%;

	ul {
		margin-bottom: 0;
		list-style-type: none;
		grid-area: c;
		gap: 0;

		li {
			font-size: 1rem;
			line-height: 160%;
			color: $dark-grey;
			transform: none;
			padding: 0;
		}

		li:last-child {
			margin-bottom: 0;
		}

		&.show-med {
			display: none;
		}

		&.block {
			display: block;
		}
	}

	img {
		margin: auto 0;
	}

	.svg-wrapper {
		display: flex;
		width: 3.75rem;
		height: 3.75rem;
		align-items: center;
		justify-content: center;
		grid-area: a;
		opacity: 0.75;

		img {
			height: 100%;
			margin: auto;
		}
	}

	.subheading {
		margin-bottom: 0;
		grid-area: b;
	}

	@include breakpoint(mobile-lg) {
		padding: 1.25rem;
		grid-template-areas: "b a" "c c";

		.svg-wrapper {
			display: flex;
			width: 2.25rem;
			height: 2.25rem;
		}
	}
}

@include breakpoint(med) {
	.constraints-content-container {
		width: fit-content;
		gap: 2rem;
		grid-template-columns: 1fr 1fr auto;
		grid-template-rows: auto;
		grid-template-areas: "a b c";
		margin: 0 auto;

		.subheading {
			font-size: 1.5rem;
		}
	}

	.constraint-grid-container {
		display: flex;
		flex-direction: column;
		flex: 0 0 auto;
		padding: 0;
		justify-content: start;
		align-items: start;

		.svg-wrapper {
			display: flex;
			width: 3.5rem;
			height: 3.5rem;
			margin-bottom: 1rem;

			img {
				width: 3.5rem;
			}
		}

		ul {
			margin-top: 0.5rem;
			gap: 0.5rem;
			width: 100%;
		}

		ul > li {
			font-size: 1.125rem;
			margin-bottom: 0.25rem;
		}
	}
}

@include breakpoint(lg) {
	.constraints-content-container {
		grid-template-columns: 1fr 1fr auto;
		grid-template-areas: "c a b";
		gap: 3rem;
	}
}

.constraints-flex-container {
	display: flex;
	flex-direction: column;
	gap: 0.5rem;
	width: 100%;
	margin-top: 1rem;
	margin-bottom: 2rem;
}

.business-list-min-content {
	display: block;

	@include breakpoint(lg) {
		display: none;
	}
}

.business-list-max-content {
	display: none;

	@include breakpoint(lg) {
		display: block;
	}
}

.show-mobile-lg-only {
	display: none;

	@include breakpoint(mobile-lg) {
		display: block;
	}

	@include breakpoint(sm) {
		display: none;
	}
}

.show-med-only {
	display: none;

	@include breakpoint(med) {
		display: block;
	}

	@include breakpoint(lg) {
		display: none;
	}
}

.hide-mobile-lg-to-sm {
	display: block;

	@include breakpoint(mobile-lg) {
		display: none;
	}

	@include breakpoint(sm) {
		display: flex;
	}
}

.block {
	display: block;
}

